kubernetes/apps/staging-sj/flux-system/flux/webhooks/github/ciliumnetworkpolicy.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "github-webhook-rule"
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: notification-controller
  ingress:
    - fromEndpoints:
        - {}
